--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -1,40 +1,56 @@
-<form class="form-horizontal" action="/login/" method="post"> 
-   {% csrf_token %}
-                           <div class="control-group">   
-                      <label class="control-label" for="inputEmail">邮箱</label>   
-                        <div class="controls">  
-                         <input type="text" value="{{ form.email.value|default:'' }}" name="email" placeholder="输入常用邮箱">  
-                        <span style="color:red;"> {{form.email.errors}}</span>
-                        </div>  </div>  
-                        <div class="control-group">  
-                        <label class="control-label" for="inputPassword">密码</label>   
-                        <div class="controls">    
-                          <input type="password"  value="{{ form.password.value|default:'' }}" name="password" placeholder="登录密码">    
-                           <span style="color:red;"> {{form.password.errors}}</span>
-                           </div> </div> 
+
+<html>
+<head>
+    <title>login page</title>
+    <link rel="stylesheet" href="/static/css/login.css" />
+    <script type="text/javascript" src="/static/js/login.js"></script>
+</head>
+<body>
+<table>
+    <form class="form-horizontal" action="/login/" method="post"> 
+    <tr>
+        <td>
+            <label class="control-label" for="inputEmail">邮 箱</label>   <input type="text" value="{{ form.email.value|default:'' }}" name="email" placeholder="输入常用邮箱">  
+            <span style="color:red;"> {{form.email.errors}}</span>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <label class="control-label" for="inputPassword">密 码</label>   <input type="password"  value="{{ form.password.value|default:'' }}" name="password" placeholder="登录密码">    
+            <span style="color:red;"> {{form.password.errors}}</span>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <label class="control-label" for="inputphone">验证码</label> <input type="text" value="{{ form.phone.value|default:'' }}" name="phone" >
+
+            <button id='js-captcha-refresh' type="button">刷新验证码</button>
+             <span style="color:red;"> {{form.captcha.errors}}</span>         
+        </td>
+    </tr>
+    <tr>
+        <td>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <button type="submit" class="btn  btn-primary">登录</button>   <a href="/regist/" class="btn btn-primary ">立即注册</a> <a href="/changepwd/" >忘记密码？</a>
+        </td>
+    </tr>
+    </form> 
+</table>
+</body>
+</html>
+
+
+
+
+
+
+
+ 
+
+
                            
-                         <div class="control-group">   
-                      <label class="control-label" for="inputphone">验证码：</label>   
-                        <div class="controls">     
-                         {{form.captcha}}
-                         <br>
-                    <button id='js-captcha-refresh' type="button">刷新验证码</button>
-                   <script>
-   $('#js-captcha-refresh').click(function(){
-        $.get("?newsn=1", function(result){
-            $('.captcha').attr("src",result);
-            $('#id_captcha_0').attr("value",result.split('/')[3]);
-         });
-   return false;
-                   });
-                  </script>
-                     <span style="color:red;"> {{form.captcha.errors}}</span>
-                        </div>  </div> 
-           <div class="control-group">  
-             <div class="controls">     
-                 <button type="submit" class="btn  btn-primary">登录</button> 
-                    <a href="/regist/" class="btn btn-primary ">立即注册</a>
-                   <a href="/changepwd/" >忘记密码？</a>
-                    </div> 
-                     </div>
-                      </form> 
+
+
+
+ 
+
