add new function of index

--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -22,16 +22,8 @@
     </tr>
     <tr>
         <td>
-            <label class="control-label" for="inputphone">验证码</label> <input type="text" value="{{ form.phone.value|default:'' }}" name="phone" >
-
-            <button id='js-captcha-refresh' type="button">刷新验证码</button>
-             <span style="color:red;"> {{form.captcha.errors}}</span>         
-        </td>
-    </tr>
-    <tr>
-        <td>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <button type="submit" class="btn  btn-primary">登录</button>   <a href="/regist/" class="btn btn-primary ">立即注册</a> <a href="/changepwd/" >忘记密码？</a>
+            <button type="submit" class="btn  btn-primary">登录</button>   <a href="/regist/" class="btn btn-primary ">注册</a> &nbsp;&nbsp;<a href="/changepwd/" >忘记密码？</a>
         </td>
     </tr>
     </form> 
