--- a/login/templates/login/server_handler.html
+++ b/login/templates/login/server_handler.html
@@ -3,8 +3,8 @@
 <form action="/server_handler" method="post">
 {% endblock %}
 
-{% block main %}
-111
+{% block main%}
+    render{{ email }}
 {% endblock %}
 
 {% block endform %}
